# Karttapullautin

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.txt  README.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: linux-build.yml  windows-build.yml
KarttaGUI/: CMakeLists.txt
KarttaGUI/resources/: KarttaGUI.desktop  resources.rc
KarttaGUI/src/: KarttaRunner.cpp  KarttaRunner.h  MainWindow.cpp  MainWindow.h  Presetmanager.cpp  Presetmanager.h  Previewpanel.cpp  Previewpanel.h  SettingsPanel.cpp  SettingsPanel.h  ToolsPanel.cpp  ToolsPanel.h
installer/: KarttaGUI.iss
